--- a/FL11_HW1/homework/index.html
+++ b/FL11_HW1/homework/index.html
@@ -41,7 +41,7 @@
               <abbr title="Cascading Style Sheets">CSS</abbr>
               are our tools. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi
               imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu
-              volutpat enim diam eget metus. To copy a file type COPY <i>filename.</i> <del>Dinner`s at 5:00.</del> <ins>Let's make that 7.</ins>
+              volutpat enim diam eget metus. To copy a file type <samp>COPY</samp> <i>filename.</i> <del>Dinner`s at 5:00.</del> <ins>Let's make that 7.</ins>
               This has been <s>text</s> struck.
             </p>
             <hr>
@@ -169,9 +169,9 @@ both            spaces and
                 to talk to people over long distances, to transmit images, flying, accessing vast amounts of data
                 like an oracle. These are all things that would have been considered magic a few hundred years ago."
               </q>
-              <p>
+              <div>
                 <a href="#">Elon Musk</a>
-              </p>
+              </div>
             </blockquote>
           </section>
           <hr>
